Fix alignment of input container

--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ body {
 }
 
 #inputContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: white;
     height: 10vh;
     width: 25vh;
